[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Game Over.gd" type="Script" id=2]
[ext_resource path="res://Assets/buttonicon/Play_512.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttonicon/Menu_512.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Game Over" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 144.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 33.0
margin_top = 28.0
margin_right = 111.0
margin_bottom = 93.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 78.0
margin_bottom = 42.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 15.0
margin_right = 62.0
margin_bottom = 42.0
alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 47.0
margin_bottom = 19.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/ScoreContainer"]
margin_right = 42.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/ScoreContainer"]
margin_left = 46.0
margin_right = 46.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="CoinsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 47.0
margin_bottom = 42.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/CoinsContainer"]
margin_right = 43.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coins:"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/CoinsContainer"]
margin_left = 47.0
margin_right = 47.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 78.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1

[node name="Button" type="TextureButton" parent="."]
margin_left = 52.0
margin_top = 114.0
margin_right = 564.0
margin_bottom = 626.0
rect_scale = Vector2( 0.08, 0.08 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="."]
margin_left = 52.0
margin_top = 150.0
margin_right = 564.0
margin_bottom = 662.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
